--- a/style.css
+++ b/style.css
@@ -326,49 +326,112 @@ div.experience__box div.experience__description span.experience__demo a button.e
 }
 
 
-
-section.formcontato{
-    margin: 64px 100px;
-}
-
-section.formcontato div.formcontato__contacto{
-    display: flex;
+#contacto {
     background-color: var(--color-fondo-azul);
+    margin: 100px 0 0 0;
 }
 
-section.formcontato div.formcontato__contacto div.formcontato__text{
-    margin: 10px 10px;
+.contacto__info {
+    width: 80%;
+    margin: 0px 10%;
+    padding: 50px 0;
 }
 
-section.formcontato div.formcontato__contacto div.formcontato__text form.formcontato__form{
-    display: flex;
-    flex-direction: column; 
-    justify-content: center; 
+.contacto__titulo {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 1.8rem;
+    color: black;
+    margin-bottom: 15px;
+    text-align: center;
 }
 
-.formcontato__input{
+.contacto__texto {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    color: black;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.contacto__item {
+    background-color: rgb(93, 93, 93);
+    margin-bottom: 15px;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.contacto__descripcion {
+    margin-bottom: 5px;
+}
+
+.contacto__contenedor {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.contacto__input {
+    width: calc(100% - 20px);
     padding: 10px;
-    margin: 10px 0px 10px 0px;
-    border-radius: 4px;
+    border-radius: 5px;
+    margin: 5px 0;
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
     border: none;
+    outline-style: none;
+    background-color: white;
+    color: black;
 }
 
-.formcontato__textarea{
-    padding: 10px;
-    margin: 10px 0px 10px 0px;
-    border-radius: 4px;
-    border: none;
-    height: 170px;
+.contacto__input::placeholder {
+    color: black;
+    opacity: 50%;
 }
 
-.formcontato__botao{
-    padding: 10px;
-    color: white;
+.contacto__boton {
+    width: 100%;
+    padding: 15px 0;
+    border-radius: 15px;
+    margin: 20px 0px;
     background-color: #2A7AE4;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    color: white;
+    font-size: 1rem;
+    outline-style: none;
     border: none;
-    border-radius: 4px;
-    cursor: pointer;    
+    transition: all 300ms;
 }
+
+.contacto__boton:hover {
+    transform: scale(1.05, 1.05);
+    box-shadow: 0 0 20px #2A7AE4;
+}
+
+.contacto__input-mensaje {
+    resize: none;
+}
+
+.contacto__Info__datos {
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    font-weight: 500;
+    color: whitesmoke;
+    display: none;
+    text-shadow: 0 0 20px white;
+}
+
+.contacto__errores {
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    color: red;
+}
+
+.mostrar {
+    display: block;
+}
+
 
 section.footer{
     display: flex;
@@ -378,12 +441,10 @@ section.footer{
    
 }
 
-/* Vamos a desafiarnos trabajando con responsividad?
-Utiliza las referencias de los breakpoints @media abajo */
-
 
 /*Tablet*/
 @media (min-width: 768px) {
+
 
 /* Menú */
 
